fix(mobile): fix popup transition display
- popup wrapper has too much delay time in slide up, so it looks like bug
- And popup overlay has ctxpopup class, so its transition does not played

--- a/tau/src/css/profile/mobile/changeable/common/popup.less
+++ b/tau/src/css/profile/mobile/changeable/common/popup.less
@@ -115,7 +115,7 @@ Popup with listview
 Popup Overlay
 **************************/
 .ui-popup-overlay {
-	display:none;
+	display: none;
 	background-image: url("images/popup/core_theme_bg_dim.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -127,28 +127,4 @@ Popup Overlay
 	width: 100%;
 	height: 100%;
 	z-index: @z_base_popup;
-
-	&.in {
-		display:block;
-	}
-	&.out {
-		display:block;
-	}
-
-	div&.in {
-		-webkit-animation-name: fadein;
-		-moz-animation-name: fadein;
-		-webkit-animation-duration: 100ms;
-		-moz-animation-duration: 100ms;
-		-webkit-animation-fill-mode: forwards;
-		-moz-animation-fill-mode: forwards;
-	}
-	div&.out {
-		-webkit-animation-name: fadeout;
-		-moz-animation-name: fadeout;
-		-webkit-animation-duration: 100ms;
-		-moz-animation-duration: 100ms;
-		-webkit-animation-fill-mode: forwards;
-		-moz-animation-fill-mode: forwards;
-	}
 }
